cluster/apps/security/external-secrets/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  # labels:
  #   pod-security.kubernetes.io/enforce: privileged
  #   pod-security.kubernetes.io/warn: baseline
