cluster/apps/security/external-secrets/app/network-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-cluster-to-external-secrets-webhook"
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: '10250'
              protocol: TCP
